--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
     <exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
 
-    <vertx.version>4.0.0-milestone3</vertx.version>
+    <vertx.version>4.2.6</vertx.version>
     <junit-jupiter.version>5.4.0</junit-jupiter.version>
 
     <main.verticle>se.lars.Server1Verticle</main.verticle>
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.2.3</version>
+      <version>1.2.11</version>
     </dependency>
 
     <dependency>
